<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:background="@color/white"
    tools:context=".fragments.FAQFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:drawablePadding="15dip"
            android:textSize="22sp"
            android:textStyle="bold"

            android:text="@string/faq_1_question"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:drawableLeftCompat="@drawable/ic_baseline_arrow_forward_ios_24"
            app:drawableTint="#F44336" />

        <TextView
            android:id="@+id/textView2"
            android:background="@drawable/background_next_bus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:padding="14sp"
            android:text="@string/faq_1_answer"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:drawablePadding="15dip"
            android:textSize="22sp"
            android:textStyle="bold"

            android:text="@string/faq_2_question"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:drawableLeftCompat="@drawable/ic_baseline_arrow_forward_ios_24"
            app:drawableTint="#F44336" />

        <TextView
            android:background="@drawable/background_next_bus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:padding="14sp"
            android:text="@string/faq_2_answer"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:drawablePadding="15dip"
            android:textSize="22sp"
            android:textStyle="bold"

            android:text="@string/faq_3_question"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:drawableLeftCompat="@drawable/ic_baseline_arrow_forward_ios_24"
            app:drawableTint="#F44336" />

        <TextView
            android:background="@drawable/background_next_bus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:padding="14sp"
            android:text="@string/faq_3_answer"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:drawablePadding="15dip"
            android:textSize="22sp"
            android:textStyle="bold"

            android:text="@string/faq_4_question"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:drawableLeftCompat="@drawable/ic_baseline_arrow_forward_ios_24"
            app:drawableTint="#F44336" />

        <TextView
            android:background="@drawable/background_next_bus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:padding="14sp"
            android:text="@string/faq_4_answer"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:drawablePadding="15dip"
            android:textSize="22sp"
            android:textStyle="bold"

            android:text="@string/faq_5_question"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:drawableLeftCompat="@drawable/ic_baseline_arrow_forward_ios_24"
            app:drawableTint="#F44336" />

        <TextView
            android:background="@drawable/background_next_bus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:padding="14sp"
            android:text="@string/faq_5_answer"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:drawablePadding="15dip"
            android:textSize="22sp"
            android:textStyle="bold"

            android:text="@string/faq_6_question"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:drawableLeftCompat="@drawable/ic_baseline_arrow_forward_ios_24"
            app:drawableTint="#F44336" />

        <TextView
            android:background="@drawable/background_next_bus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:padding="14sp"
            android:text="@string/faq_6_answer"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:drawablePadding="15dip"
            android:textSize="22sp"
            android:textStyle="bold"

            android:text="@string/faq_7_question"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:drawableLeftCompat="@drawable/ic_baseline_arrow_forward_ios_24"
            app:drawableTint="#F44336" />

        <TextView
            android:background="@drawable/background_next_bus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:padding="14sp"
            android:text="@string/faq_7_answer"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="17sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:drawablePadding="15dip"
            android:textSize="22sp"
            android:textStyle="bold"

            android:text="@string/faq_8_question"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:drawableLeftCompat="@drawable/ic_baseline_arrow_forward_ios_24"
            app:drawableTint="#F44336" />

        <TextView
            android:background="@drawable/background_next_bus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:padding="14sp"
            android:text="@string/faq_8_answer"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="17sp" />




    </LinearLayout>
</ScrollView>